mutants.out.old/log/src__proto__batch__handle.rs_line_33_col_9.log

*** src/proto/batch/handle.rs:33:9: replace BatchHandle<'a, S>::start_batch -> Result<BatchHandle<'_, S>, Error> with Ok(BatchHandle::from_iter([Default::default()]))

*** mutation diff:
--- src/proto/batch/handle.rs
+++ replace BatchHandle<'a, S>::start_batch -> Result<BatchHandle<'_, S>, Error> with Ok(BatchHandle::from_iter([Default::default()]))
@@ -25,18 +25,17 @@
     /// returned as `Some(<old value here>)`.
     pub async fn add(&mut self, mut job: Job) -> Result<Option<serde_json::Value>, Error> {
         let bid = job.custom.insert("bid".into(), self.bid.clone().into());
         self.c.enqueue(job).await.map(|_| bid)
     }
 
     /// Initiate a child batch of jobs.
     pub async fn start_batch(&mut self, mut batch: Batch) -> Result<BatchHandle<'_, S>, Error> {
-        batch.parent_bid = Some(self.bid.clone());
-        self.c.start_batch(batch).await
+        Ok(BatchHandle::from_iter([Default::default()])) /* ~ changed by cargo-mutants ~ */
     }
 
     /// Commit this batch.
     ///
     /// The Faktory server will not queue any callbacks, unless the batch is committed.
     /// Committing an empty batch will make the server queue the callback(s) right away.
     /// Once committed, the batch can still be re-opened with [open_batch](Client::open_batch),
     /// and extra jobs can be added to it.


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0599]: no function or associated item named `from_iter` found for struct `BatchHandle` in the current scope
  --> src/proto/batch/handle.rs:33:25
   |
6  | pub struct BatchHandle<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> {
   | ----------------------------------------------------------------------------- function or associated item `from_iter` not found for this struct
...
33 |         Ok(BatchHandle::from_iter([Default::default()])) /* ~ changed by cargo-mutants ~ */
   |                         ^^^^^^^^^ function or associated item not found in `BatchHandle<'_, _>`
   |
note: if you're trying to build a new `BatchHandle<'_, _>`, consider using `BatchHandle::<'a, S>::new` which returns `BatchHandle<'_, S>`
  --> src/proto/batch/handle.rs:17:5
   |
17 |     pub(crate) fn new(bid: BatchId, c: &mut Client<S>) -> BatchHandle<'_, S> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `from_iter`, perhaps you need to implement it:
           candidate #1: `FromIterator`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
